--- a/学术界.md
+++ b/学术界.md
@@ -6,23 +6,15 @@
 知识库问答（knowledge base question answering,KB-QA）：给定自然语言形式的问题，通过对问题进行语义理解和解析，进而利用知识库进行查询、推理，最终得出答案。
 
 ### 1.2. 数据集
-FREE917:第一个大规模的KBQA数据集，于2013年提出，包含917 个问题，同时提供相应逻辑查询，覆盖600多种freebase上的关系。
-
-Webquestions：数据集中有6642个问题答案对，数据集规模虽然较FREE917提高了不少，但有两个突出的缺陷：没有提供对应的查询，不利于基于逻辑表达式模型的训练；另外webquestions中简单问句多而复杂问句少。
-
-WebQSP：是WEBQUESTIONS的子集，问题都是需要多跳才能回答，属于multi-relation KBQA dataset，另外补全了对应的查询句。
-
-Complexquestion、GRAPHQUESTIONS：分别由Bao et al.(2016), Su et al.(2016)提出，在问句的结构和表达多样性等方面进一步增强了WEBQUESTIONSP，，包括类型约束，显\隐式的时间约束，聚合操作。
-
-SimpleQuestions：数据规模较大，共100K，数据形式为(quesition，knowledge base fact)，均为简单问题，只需KB中的一个三元组即可回答,即single-relation dataset。
-
-FACTOID QUESTIONS：Serban et al.(2016) 将SimpleQuestion扩展为含30M句的FACTOID QUESTIONS，只包含答案不含问句。
-
-QALD-6 (Unger et al., 2016), QALD有几个子任务，QALD-6是英语的QA任务，目标KB是DBpedia。训练集350个问题，测试集100个问题，提供 SPARQL查询和问题相应答案集。虽然数据集规模较小，但是更为口语化、复杂。
-
-LC-QuAD：Trivedi et al.(2017) 发布，包含5000对问题及其相应的SPARQL查询的问答数据集。目标知识库是DBpedia-April,2016
-
-LC-QuAD2：Dubey et al.(2019)发布了大规模的数据集LC-QuAD2，包含30000个问题，同时也提供相应的SPARQL查询。
+- FREE917:第一个大规模的KBQA数据集，于2013年提出，包含917 个问题，同时提供相应逻辑查询，覆盖600多种freebase上的关系。
+- Webquestions：数据集中有6642个问题答案对，数据集规模虽然较FREE917提高了不少，但有两个突出的缺陷：没有提供对应的查询，不利于基于逻辑表达式模型的训练；另外webquestions中简单问句多而复杂问句少。
+- WebQSP：是WEBQUESTIONS的子集，问题都是需要多跳才能回答，属于multi-relation KBQA dataset，另外补全了对应的查询句。
+- Complexquestion、GRAPHQUESTIONS：分别由Bao et al.(2016), Su et al.(2016)提出，在问句的结构和表达多样性等方面进一步增强了WEBQUESTIONSP，，包括类型约束，显\隐式的时间约束，聚合操作。
+- SimpleQuestions：数据规模较大，共100K，数据形式为(quesition，knowledge base fact)，均为简单问题，只需KB中的一个三元组即可回答,即single-relation dataset。
+- FACTOID QUESTIONS：Serban et al.(2016) 将SimpleQuestion扩展为含30M句的FACTOID QUESTIONS，只包含答案不含问句。
+- QALD-6 (Unger et al., 2016), QALD有几个子任务，QALD-6是英语的QA任务，目标KB是DBpedia。训练集350个问题，测试集100个问题，提供 SPARQL查询和问题相应答案集。虽然数据集规模较小，但是更为口语化、复杂。
+- LC-QuAD：Trivedi et al.(2017) 发布，包含5000对问题及其相应的SPARQL查询的问答数据集。目标知识库是DBpedia-April,2016
+- LC-QuAD2：Dubey et al.(2019)发布了大规模的数据集LC-QuAD2，包含30000个问题，同时也提供相应的SPARQL查询。
 
 ### 1.3. 评测标准
 - Accuracy：当预测答案属于提供的问题答案之一时就算正确。
