--- a/学术界.md
+++ b/学术界.md
@@ -1,5 +1,22 @@
 # KBQA调研——学术界
 
+## 目录
+
+  * [1. 任务]()
+     * [1.1. 任务定义]()
+     * [1.2. 数据集]()
+     * [1.3. 评测标准]()
+  * [2. 方法总结]()
+     * [2.1. 基于语义解析（Semantic Parsing）的方法]()
+     * [2.2. 基于信息抽取（Information Extraction）的方法]()
+        * [2.2.1. 候选答案的得出]()
+        * [2.2.2. 问题的信息抽取]()
+        * [2.2.3. 训练分类器，判断候选答案是否正确]()
+        * [2.2.4. 基于向量建模（Vector Modeling）的方法]()
+  * [3. Paper List]()
+     * [3.1. 论文列表]()
+     * [3.2. 论文解读]()
+
 ## 1. 任务
 
 ### 1.1. 任务定义
@@ -24,7 +41,7 @@
 ## 2. 方法总结
 可以划分为三类：基于语义解析（Semantic Parsing）的方法，基于信息抽取（Information Extraction）的方法，基于向量建模（Vector Modeling）的方法。
 
-### 2.1. 基于语义解析（Semantic Parsing）的方法：
+### 2.1. 基于语义解析（Semantic Parsing）的方法
 
 将自然语言转化为一系列形式化的逻辑形式（logic form）,通过对逻辑形式进行自底向上的解析，得到一种可以表达整个问题语义的逻辑形式，通过相应的查询语句在知识库中进行查询，从而得出答案。
 
@@ -36,7 +53,7 @@
 
 经过以上两步可以获得候选语法树，之后训练分类器，求出自然语言问题在代表不同逻辑形式的候选语法树上的概率分布。至此完成了语义解析方法中最重要的步骤。
 
-### 2.2. 基于信息抽取（Information Extraction）的方法：
+### 2.2. 基于信息抽取（Information Extraction）的方法
 提取问题中的实体，通过在知识库中查询该实体可以得到以该实体节点为中心的知识库子图，子图中的每一个节点或边都可以作为候选答案，通过观察问题依据某些规则或模板进行信息抽取，得到表征问题和候选答案特征的特征向量，建立分类器通过输入特征向量对候选答案进行筛选，从而得出最终答案。
 
 一个经典的信息抽取baseline方法，来自《Information Extraction over Structured Data: Question Answering with Freebase》，主要介绍该文中如何得出候选答案，如何对问题进行信息抽取，以及最终判断候选答案是否为正确答案。
