--- a/学术界.md
+++ b/学术界.md
@@ -2,20 +2,20 @@
 
 ## 目录
 
-  * [1. 任务]()
-     * [1.1. 任务定义]()
-     * [1.2. 数据集]()
-     * [1.3. 评测标准]()
-  * [2. 方法总结]()
-     * [2.1. 基于语义解析（Semantic Parsing）的方法]()
-     * [2.2. 基于信息抽取（Information Extraction）的方法]()
-        * [2.2.1. 候选答案的得出]()
-        * [2.2.2. 问题的信息抽取]()
-        * [2.2.3. 训练分类器，判断候选答案是否正确]()
-        * [2.2.4. 基于向量建模（Vector Modeling）的方法]()
-  * [3. Paper List]()
-     * [3.1. 论文列表]()
-     * [3.2. 论文解读]()
+   * [1. 任务](#1-任务)
+      * [1.1. 任务定义](#11-任务定义)
+      * [1.2. 数据集](#12-数据集)
+      * [1.3. 评测标准](#13-评测标准)
+   * [2. 方法总结](#2-方法总结)
+      * [2.1. 基于语义解析（Semantic Parsing）的方法](#21-基于语义解析semantic-parsing的方法)
+      * [2.2. 基于信息抽取（Information Extraction）的方法](#22-基于信息抽取information-extraction的方法)
+         * [2.2.1. 候选答案的得出](#221-候选答案的得出)
+         * [2.2.2. 问题的信息抽取](#222-问题的信息抽取)
+         * [2.2.3. 训练分类器，判断候选答案是否正确](#223-训练分类器判断候选答案是否正确)
+         * [2.2.4. 基于向量建模（Vector Modeling）的方法](#224-基于向量建模vector-modeling的方法)
+   * [3. Paper List](#3-paper-list)
+      * [3.1. 论文列表](#31-论文列表)
+      * [3.2. 论文解读](#32-论文解读)
 
 ## 1. 任务
 
