补充了部分数据集的链接

--- a/学术界.md
+++ b/学术界.md
@@ -41,8 +41,22 @@
 ! SOTA board
 ```
 
+| 数据集              | 地址                                                         |
+| ------------------- | ------------------------------------------------------------ |
+| WebQuestions        | https://github.com/brmson/dataset-factoid-webquestions       |
+| WebQuestionsSP      | https://www.microsoft.com/en-us/download/details.aspx?id=52763 |
+| SimpleQuestions     | https://research.fb.com/downloads/babi/                      |
+| ComplexWebQuestions | https://www.tau-nlp.org/compwebq                             |
+| GraphQuestions      | https://github.com/ysu1989/GraphQuestions                    |
+| LC-QuAD             | https://github.com/AskNowQA/LC-QuAD                          |
+| LC-QuAD 2.0         | http://lc-quad.sda.tech/                                     |
+|                     |                                                              |
+|                     |                                                              |
+
+
 
 ### 1.4. 评测标准
+
 - Accuracy：当预测答案属于提供的问题答案之一时就算正确。
 - average f1
 - Hits@1
