--- a/学术界.md
+++ b/学术界.md
@@ -189,11 +189,6 @@ QALD-6:
 
 ## 3. Paper List
 ### 3.1. 论文列表
-```diff
-! 在下表中添加论文链接
-! 补充论文
-```
-
 
 | 会议/年份  | 论文 |链接|
 | ------------- | ------------- |------------- |
@@ -334,7 +329,7 @@ in the noisy settings >> state-of-the-art models by a significant margin
 之前基于语义解析的方法大部分都在“如何选择问题对应最合适的semantic parse”，却忽略了在semantic parse本身结构的研究。复杂问题的semantic parse由多个entity和relation组成，比起简单问题的表示要难很多，因此本文着手解决复杂问题的semantic parse结构。作者提出使用Gated Graph Neural Networks以图的结构来编码语法解析结构。
 
 ## 4. 相关链接
-[综述文章》(https://arxiv.org/pdf/1907.09361.pdf)
+[综述文章《introduction to neural network based approaches for question answering over knowledge graphs》](https://arxiv.org/pdf/1907.09361.pdf)
 
 [CCKS 2019中文知识图谱问答](https://www.biendata.com/competition/ccks_2019_6/)
 
