update KBQA industry

--- a/工业界.md
+++ b/工业界.md
@@ -317,7 +317,7 @@
 - [百度](https://baijiahao.baidu.com/s?id=1643915882369765998&wfr=spider&for=pc)
 - [美团KG构建方法](https://tech.meituan.com/2018/11/01/meituan-ai-nlp.html)，[美团餐饮娱乐知识图谱](https://tech.meituan.com/2018/11/22/meituan-brain-nlp-01.html)，[美团BERT](https://tech.meituan.com/2019/11/14/nlp-bert-practice.html)
 
-### 5. 参考资源
+## 5. 参考资源
 
 [中文知识图谱问答 CCKS2019 CKBQA 参赛总结](https://blog.csdn.net/zzkv587/article/details/102954876)
 
