update KBQA industry

--- a/工业界.md
+++ b/工业界.md
@@ -54,7 +54,7 @@
 
 &emsp;&emsp;&emsp;&emsp;[4.2&nbsp;部分企业知识图谱说明](#42-部分企业知识图谱说明)
 
-&emsp;&emsp;&emsp;&emsp;[5.&nbsp;参考资源](#5-参考资源)
+&emsp;&emsp;[5.&nbsp;参考资源](#5-参考资源)
 
 ## 1. 任务
 
