--- a/学术界.md
+++ b/学术界.md
@@ -86,57 +86,56 @@ SimpleQuestions：
 ComplexWebQuestions:
 | 模型              | P@1                                        |
 | ------------------- | -----------------------------------------|
-|MHQA-GRN|30.10|
-|SIMPQA + PRETRAINED|19.90|
-|SPLITQA + PRETRAINED|25.90|
-|SPLITQA + data augmentation|34.20|
-|PullNet|45.90|
-|SPARQA|31.57|
+|[MHQA-GRN](https://arxiv.org/pdf/1809.02040.pdf)|30.10|
+|[SIMPQA + PRETRAINED](https://arxiv.org/pdf/1807.09623.pdf)|19.90|
+|[SPLITQA + PRETRAINED](https://arxiv.org/pdf/1807.09623.pdf)|25.90|
+|[SPLITQA + data augmentation](https://arxiv.org/pdf/1807.09623.pdf)|34.20|
+|[PullNet](https://www.aclweb.org/anthology/D19-1242.pdf)|45.90|
+|[SPARQA](https://arxiv.org/pdf/2003.13956.pdf)|31.57|
 
 
 GraphQuestion:
 | 模型              | F1                                        |
 | ----------------- | ------------------------------------------|
-|SEMPRE|10.80|
-|PARASEMPRE|12.79|
-|JACANA|5.08|
-|UDEPLAMBDA|17.70|
-|SCANNER|17.02|
-|PARA4QA|20.40|
-|SPARQA|21.53|
+|[SEMPRE](https://www.aclweb.org/anthology/D13-1160.pdf)|10.80|
+|[PARASEMPRE](https://www.aclweb.org/anthology/P14-1133.pdf)|12.79|
+|[JACANA](http://cs.jhu.edu/~xuchen/paper/yao-jacana-freebase-acl2014.pdf)|5.08|
+|[UDEPLAMBDA](https://arxiv.org/pdf/1702.03196.pdf)|17.70|
+|[SCANNER](https://arxiv.org/pdf/1704.08387.pdf)|17.02|
+|[PARA4QA](https://arxiv.org/pdf/1708.06022.pdf)|20.40|
+|[SPARQA](https://arxiv.org/pdf/2003.13956.pdf)|21.53|
 
 ComplexQuestions:
 | 模型              | average F1                                        |
 | ----------------- | ------------------------------------------|
-|Aqqu|27.8%|
-|Aqqu++|46.7%|
-|QUINT|49,2%|
-|STF|54.3%|
-
-
-WebQuestions:
-| 模型              | average F1                                        |
-| ----------------- | ------------------------------------------|
-|Aqqu|49.4%|
-|Aqqu++|49.4%|
-|NFF|49.6%|
-|QUINT|51.0%|
-|STAGG|52.5%|
-|STF|53.6%|
-
+|[Aqqu](http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf)|27.8%|
+|[Aqqu++](http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf)|46.7%|
+|[QUINT](http://papers.www2017.com.au.s3-website-ap-southeast-2.amazonaws.com/proceedings/p1191.pdf)|49,2%|
+|[STF](https://www.aclweb.org/anthology/D18-1234.pdf)|54.3%|
 
 QALD-6:
 | 模型              | F1                                        |
 | ----------------- | ------------------------------------------|
-|U1QA2|0.17|
-|U1QA1|0.25|
 |SemGraphQA|0.37|
-|Aqqu|0.38|
-|gAnswer|0.55|
+|[Aqqu](http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf)|0.38|
+|[gAnswer](https://www.researchgate.net/publication/266656635_Natural_language_question_answering_over_RDF_-_A_graph_data_driven_approach)|0.55|
 |KWGAnswer|0.70|
 |UTQA|0.75|
-|STF|0.80|
-|CaNaLi|0.89|
+|[NFF](https://ieeexplore.ieee.org/document/8085196)|0.78|
+|[STF](https://www.aclweb.org/anthology/D18-1234.pdf)|0.80|
+|[CaNaLi](https://openproceedings.org/2016/conf/edbt/paper-259.pdf)|0.89|
+
+WebQuestions:
+| 模型              | average F1                                        |
+| ----------------- | ------------------------------------------|
+|[Aqqu](http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf)|49.4%|
+|[Aqqu++](http://ad-publications.informatik.uni-freiburg.de/freebase-qa.pdf)|49.4%|
+|[NFF](https://ieeexplore.ieee.org/document/8085196)|49.6%|
+|[QUINT](http://papers.www2017.com.au.s3-website-ap-southeast-2.amazonaws.com/proceedings/p1191.pdf)|51.0%|
+|[STAGG](https://www.aclweb.org/anthology/P15-1128.pdf)|52.5%|
+|[STF](https://www.aclweb.org/anthology/D18-1234.pdf)|53.6%|
+
+
 
 
 ### 1.5. 评测标准
